styles/globals.css
/* Definition font family */
/* thai */
@font-face {
    font-family: 'Kanit';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Kanit Regular'), local('Kanit-Regular'), url(/font/Kanit-thai.woff2) format('woff2');
    unicode-range: U+0E01-0E5B, U+200C-200D, U+25CC;
}
/* vietnamese */
@font-face {
    font-family: 'Kanit';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Kanit Regular'), local('Kanit-Regular'), url(/font/Kanit-vietnamese.woff2) format('woff2');
    unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
    font-family: 'Kanit';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Kanit Regular'), local('Kanit-Regular'), url(/font/Kanit-latin-ext.woff2) format('woff2');
    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
    font-family: 'Kanit';
    font-style: normal;
    font-weight: 400;
    font-display: swap;
    src: local('Kanit Regular'), local('Kanit-Regular'), url(/font/Kanit-latin.woff2) format('woff2');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
    --primary-color: #1ba3e4;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

a{
    color: white;
    text-decoration: none;
    outline: 0;
}

a:hover {
    text-decoration: underline;
}

img{
    pointer-events: none;
}

html,
body {
    padding: 0;
    margin: 0;
    font-family: 'Kanit', sans-serif;
    color: white;
    background-color: #06243c;
    scroll-behavior: smooth;
}

body {
    overflow-y: scroll;
}

button, input {
    font-family: inherit;
    outline: 0;
    transition-duration: .25s;
}

h1, h2, h3, h4, p {
    margin: 0;
}

.sub {
    position: relative;
    width: 100%;
    height: 100%;
}

.centerContain {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.inlineBlock {
    display: inline-block;
}

.scroll-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    will-change: transform;
}

.btn {
    margin: 5px 10px 10px 5px;
    padding: 5px 15px;
    min-width: 146px;
    font-family: inherit;
    font-size: 18px;
    white-space: nowrap;
    color: white;
    background-color: rgba(255, 255, 255, .2);
    border: unset;
    border-radius: 5px;
    outline: 0;
    transition-duration: .15s;
}

.btn:hover {
    background-color: rgba(255, 255, 255, .3);
}

.btn:active {
    background-color: rgba(255, 255, 255, .4);
    transition-duration: .1s;
}

.container {
    margin: 0 auto;
    width: 100%;
    min-height: 100vh;
}

.section {
    width: 100%;
}

.infoTitle {
    margin: 50px 0;
}

.understandCSS {
    position: relative;
    margin: 50px auto;
    width: fit-content;
}

.understandCSS .frame {
    position: relative;
    margin: auto;
    padding: 10px;
    width: 200px;
    white-space: nowrap;
    font-size: 15px;
    text-align: left;
    border: 3px white solid;
}

.harfShade {
    position: relative;
    display: grid;
    grid-template-columns: 50% 50%;
}

.harfShade::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 1px;
    background-image: linear-gradient(to right,
                    rgba(255, 255, 255, 0),
                    rgba(255, 255, 255, .75),
                    rgba(255, 255, 255, 0));
}

.harfShade .topic {
    padding-top: 50px;
    padding-right: 50px;
    width: 100%;
    text-align: right;
    border-right: 1px rgba(255, 255, 255, .1) solid;
}

.harfShade .topic .navContainer {
    position: sticky;
    top: 30px;
}

.harfShade .topic .navContainer h2 {
    font-weight: 100;
}

.harfShade .topic .navContainer a {
    color: rgba(255, 255, 255, .75);
}

.harfShade .topic .navContainer svg {
    color: white;
}

.harfShade .detail {
    padding-top: 50px;
    padding-left: 50px;
    width: calc(100% - 50px);
    overflow: hidden;
}

.parallaxHero {
    position: absolute;
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
}

.scrollDown {
    position: absolute;
    left: 50%;
    bottom: 20px;
    transform: translateX(-50%);
    text-align: center;
    font-size: 20px;
    color: rgba(255, 255, 255, .5);
}

.scrollDown a {
    text-decoration: none;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .75);
    z-index: 10009;
}

.modal .modalContainer {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-width: 95vw;
    max-height: 95vh;
    height: 600px;
    border-radius: 10px;
    overflow: hidden;
}

.modal .modalContainer .sub {
    background-color: #313131;
    overflow: auto;
}

.modal .modalContainer .xButton {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0 10px;
    text-align: right;
    font-family: inherit;
    font-weight: 100;
    background-color: rgba(0, 0, 0, 0.25);
    cursor: default;
    transition-duration: .25s;
}

.modal .modalContainer .xButton:hover {
    background-color: rgba(0, 0, 0, 0.4);
}

.modal .modalContainer .xButton:active {
    background-color: rgba(0, 0, 0, 0.5);
    transition-duration: .1s;
}

.brinessDown {
    filter: brightness(.5);
    transition-duration: 1s;
}

.credit {
    padding: 10px;
    width: 100%;
    text-align: right;
    font-size: 15px;
    color: rgb(255 255 255 / 75%);
    text-align: center;
    background-color: #041b2d;
}

.credit p {
    display: inline;
}

@media only screen and (max-width: 500px) {

    .scroll-container {
        overflow: unset;
    }

    .scrollDown {
        bottom: 70px;
    }

    .credit {
        text-align: center;
    }

    .blockMobile {
        display: block !important;
    }

    .harfShade {
        grid-template-columns: 130px calc(100% - 130px);
    }

    .harfShade .detail {
        padding-left: 20px;
        width: 100%;
    }
    
    .modal .modalContainer {
        min-width: 100vw;
        border-radius: unset;
    }

}

@media only screen and (max-width: 310px) {

    .harfShade {
        grid-template-columns: 110px calc(100% - 110px);
    }

    .harfShade .topic .navContainer h2 {
        font-size: 20px;
    }

    .understandCSS .frame {
        width: 100px;
    }

    .understandCSS .frame h1 {
        font-size: 20px;
    }

}

